# statistician-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.do/: app.yaml
.github/workflows/: ci.yml
scripts/: issue_key.py
src/statistician_mcp/: __main__.py  apikeys.py  artifacts.py  cli.py  config.py  datasets.py  envelope.py  errors.py  http_app.py  oauth.py  server.py  storage.py  url_fetch.py  usage.py  workspace.py
src/statistician_mcp/content/: concepts.yaml
src/statistician_mcp/modules/: advisor.py  datasets_tools.py  doe.py  eda.py  inference.py  msa.py  power.py  regression.py  spc.py
src/statistician_mcp/stats/: assumptions.py  capability.py  control_charts.py  desirability.py  doe_analysis.py  doe_designs.py  gauge_rr.py  inference.py  power.py  regression.py
src/statistician_mcp/utils/: formulas.py  plotting.py
tests/: conftest.py  test_apikeys.py  test_dataset_tools.py  test_datasets.py  test_datasets_concurrency.py  test_envelope.py  test_formulas.py  test_http.py  test_oauth.py  test_resource_limits.py  test_server.py  test_storage.py  test_timeout_middleware.py  test_usage.py
tests/modules/: test_advisor_tools.py  test_doe_tools.py  test_eda_tools.py  test_inference_tools.py  test_msa_tools.py  test_regression_tools.py  test_spc_tools.py
tests/stats/: test_assumptions.py  test_capability.py  test_control_charts.py  test_desirability.py  test_doe_analysis.py  test_doe_designs.py  test_gauge_rr.py  test_inference.py  test_power.py  test_regression.py
