[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ypotheto-statistician-mcp"
dynamic = ["version"]
description = "MCP server providing virtual statistician tools for DOE, SPC, EDA, statistical modeling, and data-driven decision support."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pyDOE3>=1.0",
    "scikit-posthocs>=0.9",
    "matplotlib>=3.9",
    "pyarrow>=16.0",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "boto3>=1.34",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "moto[s3]>=5.0",
]

[project.scripts]
statistician-mcp = "statistician_mcp.cli:main"

[tool.hatch.version]
path = "src/statistician_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/statistician_mcp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
